[Minting] Overmint error when rewards increase
Pivx #814
Overmint error when rewards increase

Checking expected vs actual mint for the block can stop the chain on a block where rewards increase. The expected value is less than the new value and the error reward pays too much (actual=%s vs limit=%s) is logged because it is comparing expected mint and actual mint of different blocks.
Carbon-Zero committed on Feb 22

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@
 \.vs/privix-core/v15/ipch/AutoPCH/54b8d9a1e354f82/POW\.ipch
 
 \.vs/privix-core/v15/ipch/AutoPCH/6022c6eb9483ef8f/SPORK\.ipch
+
+\.vs/VSWorkspaceState\.json
