--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@
 \.vs/privix-core/v15/ipch/AutoPCH/6022c6eb9483ef8f/SPORK\.ipch
 
 \.vs/VSWorkspaceState\.json
+
+\.vs/privix-core/v15/ipch/AutoPCH/62ee637654a070c9/CLIENTVERSION\.ipch
