--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,7 @@
 \.vs/privix-core/v15/ipch/AutoPCH/54b8d9a1e354f82/POW\.ipch
 
 \.vs/privix-core/v15/ipch/AutoPCH/6022c6eb9483ef8f/SPORK\.ipch
+
+\.vs/VSWorkspaceState\.json
+
+\.vs/privix-core/v15/ipch/AutoPCH/62ee637654a070c9/CLIENTVERSION\.ipch
